<resources>

    <!--LOGIN ACTIVITY STRINGS-->
    <string name="logo">Logo</string>
    <string name="cpr">Cpr</string>
    <string name="password">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_register">Register</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_your_password">Forgot your password?</string>

    <!--OVERVIEW ACTIVITY STRINGS-->
    <string name="overview_title">Overview</string>
    <string name="CURRENT_BANK_ACC">currBankAccount</string>


    <!--REGISTER ACTIVITY STRINGS-->
    <string name="register_info">Velkommen til kea bank!\nFor at kunne oprette dig som kunde skal vi bruge nogle oplysninger om dig\n</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phonenumber</string>
    <string name="address">Address</string>


    <!--OVERVIEW CARD ITEM STRINGS-->
    <string name="acc_name">Account name</string>
    <string name="acc_no">Account no</string>

    <!--APP SPECIFIC STRINGS-->
    <string name="app_name">BankingApp</string>
    <string name="title_activity_overview">Overview</string>


    <!--TRANSFER ACTIVITY-->
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="text_for_you">Text for you</string>
    <string name="text_for_receiver">Text for receiver</string>
    <string name="date">Date</string>
    <string name="date_of_transfer">Date of transfer</string>
    <string name="transfer">Transfer</string>


    <!--DO NOT TRANSLATE  (Used as db identifiers)-->
    <string name="BALANCE">balance</string>
    <string name="TRANSFERSTATE">TRANSFERSTATE</string>
    <string name="RandomCodeString">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#</string>
    <string name="new_password">newPassword</string>
    <string name="confirm_password">confirmPassword</string>
    <string name="reset_code">resetCode</string>
    <string name="affiliate">Affiliate</string>
    <string name="SHARED_PREF_LOGIN">current_user</string>


    <!--UNUSED FOR NOW-->

    <!--<string name="title_home">Home</string>-->
    <!--<string name="title_dashboard">Dashboard</string>-->
    <!--<string name="title_notifications">Notifications</string>-->


    <!--TRANSFER DIALOG STRINGS-->
    <string-array name="transfer_options_array">
        <item>My accounts</item>
        <item>Other accounts</item>
    </string-array>

</resources>
